# iot

./: .pre-commit-config.yaml  pyproject.toml
client/: README.md
client/frontend/: package-lock.json  package.json
client/frontend/src/api/: api.ts
controller/air_analizator/: air_analizator.ino
frontend/: eslint.config.mjs  package-lock.json  package.json
frontend/src/: types.ts
frontend/src/api/: api.ts  humidity.ts  temperature.ts
frontend/src/app/: layout.tsx
frontend/src/app/climate-dashbord/: page.tsx
frontend/src/app/climate-track/: layout.tsx  page.tsx
frontend/src/components/: providers.tsx
frontend/src/components/climate/: ClimateLineChart.tsx  GaugeClimate.tsx
frontend/src/types/: humidity.ts  temperature.ts  types.ts
server/: logger.py  main.py  pyproject.toml  settings.py
server/alembic/: env.py
server/alembic/versions/: 161451529395_.py  2b5a8d870c60_.py  7d7558be659d_.py
server/app/: db.py  schema.py
server/app/api/: humidity.py  temperature.py
server/app/humidity/: api.py  models.py  schema.py
server/app/models/: humidity.py  temperature.py
server/app/repositories/: humidity.py  temperature.py
server/app/shemas/: humidity.py  temperature.py
server/app/sound_level/: api.py  models.py
server/app/temperature/: api.py  models.py  schema.py
tasks/: go.mod  go.sum  main.go  pyproject.toml  redis_to_mqtt.py
telegram/: .env.example  Dockerfile  logger.py  main.py  pyproject.toml  services.py  services_setup.py  settings.py
telegram/handlers/: handlers.py  mqtt_handlers.py  telegram_handlers.py
(+1 files in other folders)
